--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Education Model Template</title>
 </head>
 <body>
- 
+    <header>
+        <nav>
+            <ul>
+                <li><a></a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
