--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li><a></a></li>
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contacts</a></li>
             </ul>
         </nav>
     </header>
