--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
             </ul>
         </nav>
     </header>
+    <div class="hero">
+        <h1>Title</h1>
+        <h2>Subtitle</h2>
+    </div>
+    <div class="text-only">
+      <h1>Heading</h1>
+      <p>
+        Hello
+      </p>
+      <p>
+        Hello
+      </p>
+    </div>
 </body>
 </html>
